--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,9 @@
 [theme]
-base="light"
-# main page background
-backgroundColor = "#FFFFFF"        # pure white
-# accent (buttons, sliders, highlights)
-primaryColor      = "#FFFACD"      # “lemon chiffon” – a soft pale lemon
-# secondary panels (sidebar, cards, etc.)
-secondaryBackgroundColor = "#FFFACD"
-# text remains dark for contrast
-textColor         = "#000000"
+# Inherit from the light base theme
+base = "light"
+# Set primary (accent) color to your lemon‑green
+primaryColor = "#6bcc2f"
+# (Optional) Keep the rest of your palette consistent
+backgroundColor        = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor              = "#000000"
